Working on the index a bit, have news stories displaying and a mock lottery section

--- a/public/templates/index/index.html
+++ b/public/templates/index/index.html
@@ -1,48 +1,149 @@
-<div class="row" data-ng-cloak>
-	<div class="col-sm-6">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">Panel title</h3>
-			</div>
-			<div class="panel-body">
-				Panel content
-				<button ng-click="indexCtrl.toast()">HIT ME!</button>
-			</div>
-		</div>
-	</div>
-	<div class="col-sm-6">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">Panel title</h3>
-			</div>
-			<div class="panel-body">
-				Panel content
-			</div>
-		</div>
-	</div>
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default site-intro">
+            <div class="panel-heading">
+                <h3 class="panel-title">Welcome to TibiaLottery</h3>
+            </div>
+            <div class="panel-body">
+                <div class="col-lg-4 logo-container">
+                    <img src="http://tibialottery.com/images/logo.png" alt="TibiaLottery Logo" />
+                </div>
+                <div class="col-lg-8">
+                    <h2>Hello and welcome to TibiaLottery!</h2>
+                    <br />
+                    This website was made in an effort to replace a little piece of what was lost when Erig shut down his supported fansite. So, in an attempt to provide the public with a completely random number generator, I created this website.<br />
+                    <br />
+                    I hope you enjoy this site as much as we've enjoyed making it and working on it.<br />
+                    <br />
+                    Yours,<br />
+                    The TibiaLottery Team
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="row">
-	<div class="col-sm-12">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">Panel title</h3>
-			</div>
-			<div class="panel-body">
-				Panel content
-			</div>
-		</div>
-	</div>
+    <div class="col-lg-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Upcoming Lotteries</h3>
+            </div>
+            <div class="panel-body">
+                <table class="clean-table">
+                    <thead>
+                    <tr>
+                        <th>Lottery ID</th>
+                        <th>Creator</th>
+                        <th>Draw Date</th>
+                        <th>Server</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/6494">6494</a></td>
+                        <td>Dimas da Gama</td>
+                        <td>May 6th, 2016</td>
+                        <td>Honera</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/36383">36383</a></td>
+                        <td>Skyzo</td>
+                        <td>May 7th, 2016</td>
+                        <td>Antica</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/46047">46047</a></td>
+                        <td>Jevia Scorn</td>
+                        <td>May 18th, 2016</td>
+                        <td>Antica</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/28352">28352</a></td>
+                        <td>Jevia Scorn</td>
+                        <td>May 20th, 2016</td>
+                        <td>Antica</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/54009">54009</a></td>
+                        <td>Jevia Scorn</td>
+                        <td>May 23rd, 2016</td>
+                        <td>Antica</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="col-lg-6">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Recently Drawn Lotteries</h3>
+            </div>
+            <div class="panel-body">
+                <table class="clean-table">
+                    <thead>
+                    <tr>
+                        <th>Lottery ID</th>
+                        <th>Creator</th>
+                        <th>Date Drawn</th>
+                        <th>Server</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/26423">26423</a></td>
+                        <td>Mike</td>
+                        <td>April 26th, 2016</td>
+                        <td>Server not specified</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/12950">12950</a></td>
+                        <td>Texas</td>
+                        <td>April 24th, 2016</td>
+                        <td>Server not specified</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/89310">89310</a></td>
+                        <td>Magerit</td>
+                        <td>April 24th, 2016</td>
+                        <td>Server not specified</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/37157">37157</a></td>
+                        <td>Nykki Kaos</td>
+                        <td>April 23rd, 2016</td>
+                        <td>Magera</td>
+                    </tr>
+
+                    <tr>
+                        <td><a href="http://tibialottery.com/view/91546">91546</a></td>
+                        <td>dd</td>
+                        <td>April 20th, 2016</td>
+                        <td>Server not specified</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
-<div class="row">
-	<div class="col-sm-12">
-		<div class="panel panel-default">
-			<div class="panel-heading">
-				<h3 class="panel-title">Panel title</h3>
-			</div>
-			<div class="panel-body">
-				Panel content
-			</div>
-		</div>
-	</div>
+
+<div class="row fade-in" ng-if="indexCtrl.news.length !== 0">
+    <div class="col-sm-12" ng-repeat="news in indexCtrl.news track by news.AutoInc">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">{{news.Title}}</h3>
+            </div>
+            <div class="panel-body" ng-bind-html="news.Contents">
+            </div>
+        </div>
+    </div>
 </div>
