--- a/public/sass/_custom_style.scss
+++ b/public/sass/_custom_style.scss
@@ -174,6 +174,14 @@ a.md-raised.md-primary.md-button.md-ink-ripple {
 .panel-default {
 	border-color: $panel-border-color;
 	box-shadow: 2px 2px 12px rgba(black, 0.3);
+
+	.md-content.md-default-theme, md-content {
+		background: inherit;
+	}
+}
+
+.panel-body {
+	background: url(http://subtlepatterns2015.subtlepatterns.netdna-cdn.com/patterns/white_wall_hash.png);
 }
 
 #__bs_notify__ {
@@ -195,4 +203,22 @@ a.md-raised.md-primary.md-button.md-ink-ripple {
 		background-color: white;
 		color: black;
 	}
+}
+
+hr {
+	margin: 5px 0;
+	border: 0;
+	border-top: 1px solid rgba(black, 0.2);
+}
+
+b {
+	font-weight: bold;
+}
+
+i {
+	font-style: italic;
+}
+
+u {
+	text-decoration: underline;
 }
