--- a/public/templates/account/account.html
+++ b/public/templates/account/account.html
@@ -34,7 +34,7 @@
 				<div ng-if="accountCtrl.lotteriesLoading">
 					<md-progress-linear md-mode="indeterminate"></md-progress-linear>
 				</div>
-				<table class="fade-in" id="lottery-table" ng-if="!accountCtrl.lotteriesLoading && accountCtrl.lotteries.length > 0">
+				<table class="fade-in clean-table" id="lottery-table" ng-if="!accountCtrl.lotteriesLoading && accountCtrl.lotteries.length > 0">
 					<colgroup>
 						<col span="1" style="width: 20%;">
 						<col span="1" style="width: 20%;">
