Extracted the news entries to a directive and made them show the date, removed the sce processing of news entries from the index to the news entry directive

--- a/public/sass/main.scss
+++ b/public/sass/main.scss
@@ -19,3 +19,4 @@
 
 /* Directives */
 @import '../app/directives/tl-countdown/tl_countdown';
+@import '../app/directives/tl-news-entry/tl_news_entry';
